--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+@font-face {
+  font-family: "Awesome";   /*Can be any text*/
+  src: local("Awesome"),
+    url("./fonts/Awesome Lathusca.woff") format("woff");
+}
