--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+h1, p, h2, h3, h4, h5, h6 {
+ font-family: awesome;
+}
